2005-02-18  Paul Stevens <paul@nfg.nl>

	* sqlite/dbsqlite.c: added initial sqlite support provided by Geo
	Carncross. Also fixed the autoconf files to support this.
	* user.c: remove percentage from user listing.
	* dbmail.schema: added uidNumber to MUST fields in dbmailUser.

2005-02-14  Paul Stevens <paul@nfg.nl>

	* create_tables_innoDB.mysql, create_tables.pgsql, migrate_from_1.x_to_2.0.mysql, 
	migratie_from_1.x_to_2.0.pgsql: added ON UPDATE CASCADE to all foreign keys.
	* Makefile.am, acinclude.m4: define AUTHLDAP for authldap builds.
	* auth.h, check_dbmail_deliver.c, db.c, db.h, dbmail-imapsession.c,
	auth/authldap.c, auth/authsql.c: authldap is now feature complete.
	* dbmail.schema: ldap schema file which defines dbmailUser and
	dbmailForwardingAddress objects.
	* dbmail.conf: LDAP stanza included.

2005-02-07  Paul Stevens <paul@nfg.nl>

	* auth.h, auth/authsql.c, auth/authldap.c: first wave of authldap
	fixes. 
	* check_dbmail_deliver.c: implement testcases for auth.h api. The rest
	of the tests for the delivery chain is still todo.
	* user.c: change output from dbmail-users -l to make it machine
	parseable and emulate unix getent standard.
	* db.c, dbmail-message.c: move db_insert_message functionality to dbmail-message.c
	* misc.c, imaputil.c: move some generic utilities to misc.c.
	* list.c (g_list_copy_list): added shallow copy of old-style list to
	glist.
	* pipe.c, dbmail-message.c: cleanup dbmail_message_store_temp.

2005-01-26  Paul Stevens <paul@nfg.nl>

	* imaputil.c, imapcommands.c (_ic_search): introduce sort_search which
	optimizes the search keys.
	* dbmail-message.c, pipe.c, main.c, lmtp.c: move chunks of the insertion 
	logic to dbmail-message.c.
	* check_dbmail_message.c, Makefile.am: added another test suite.
	* lib/iniparser-2.14/Makefile.orig, lib/iniparser-2.14/test/Makefile:
	removed redundant files.
	* dbmail-imapsession.c: added UIDNEXT to select response.
	* dbmail-imapsession.c: removed redundant parentheses around envelope