@@ -58,6 +58,7 @@ static void Daemonize(void);
 static int SetMainSigHandler(void);
 static void MainSigHandler(int sig, siginfo_t * info, void *data);
 
+static void get_config(serverConfig_t *config);
 
 int imap_before_smtp = 0;
 int mainRestart = 0;
@@ -80,7 +81,6 @@ int do_showhelp(void) {
 	return 0;
 }
 
-
 #ifdef PROC_TITLES
 int main(int argc, char *argv[], char **envp)
 #else
@@ -102,12 +102,10 @@ int main(int argc, char *argv[])
 			/* TODO: Perhaps verbose should log to the console with -n? */
 			break;
 		case 'V':
-			printf("\n*** DBMAIL: dbmail-imapd version "
-			       "$Revision$ %s\n\n", COPYRIGHT);
+			printf("\n*** DBMAIL: dbmail-imapd version $Revision$ %s\n\n", 
+					COPYRIGHT);
 			return 0;
 		case 'n':
-			/* TODO: We should also prevent children from forking,
-			 * but for now we'll just set a flag and skip Daemonize. */
 			no_daemonize = 1;
 			break;
 		case 'h':
@@ -117,9 +115,7 @@ int main(int argc, char *argv[])
 			if (optarg && strlen(optarg) > 0)
 				pidFile = optarg;
 			else {
-				fprintf(stderr,
-					"dbmail-imapd: -p requires a filename "
-					"argument\n\n");
+				fprintf(stderr, "dbmail-imapd: -p requires a filename argument\n\n");
 				return 1;
 			}
 			break;
@@ -127,9 +123,7 @@ int main(int argc, char *argv[])
 			if (optarg && strlen(optarg) > 0)
 				configFile = optarg;
 			else {
-				fprintf(stderr,
-					"dbmail-imapd: -f requires a filename "
-					"argument\n\n");
+				fprintf(stderr, "dbmail-imapd: -f requires a filename argument\n\n");
 				return 1;
 			}
 			break;
@@ -142,9 +136,14 @@ int main(int argc, char *argv[])
 
 	SetMainSigHandler();
 
-	/* TODO: don't spawn children, either. this is at least a good start. */
-	if (!no_daemonize)
-		Daemonize();
+	if (no_daemonize) {
+		get_config(&config);
+		StartCliServer(&config);
+		config_free();
+		return 0;
+	}
+		
+	Daemonize();
 
 	/* We write the pidFile after Daemonize because
 	 * we may actually be a child of the original process. */
@@ -156,40 +155,32 @@ int main(int argc, char *argv[])
 		mainStop = 0;
 		mainRestart = 0;
 
-		trace(TRACE_DEBUG, "main(): reading config");
 #ifdef PROC_TITLES
 		init_set_proc_title(argc, argv, envp, PNAME);
 		set_proc_title("%s", "Idle");
 #endif
 
-		config_read(configFile);
-		SetConfigItems(&config);
-		SetTraceLevel("IMAP");
-		GetDBParams(&_db_params);
-
-		config.ClientHandler = IMAPClientHandler;
-		config.timeoutMsg = IMAP_TIMEOUT_MSG;
-
+		get_config(&config);
 		CreateSocket(&config);
 
 		switch ((pid = fork())) {
 		case -1:
 			close(config.listenSocket);
-			trace(TRACE_FATAL, "main(): fork failed [%s]",
-			      strerror(errno));
+			trace(TRACE_FATAL, "%s,%s: fork failed [%s]",
+					__FILE__, __func__,
+					strerror(errno));
 
 		case 0:
 			/* child process */
-			drop_privileges(config.serverUser,
-					config.serverGroup);
+			drop_privileges(config.serverUser, config.serverGroup);
 			result = StartServer(&config);
-			trace(TRACE_INFO, "main(): server done, exit.");
+			trace(TRACE_INFO, "%s,%s: server done, exit.",
+					__FILE__, __func__);
 			exit(result);
 
 		default:
 			/* parent process, wait for child to exit */
-			while (waitpid(pid, &status, WNOHANG | WUNTRACED)
-			       == 0) {
+			while (waitpid(pid, &status, WNOHANG | WUNTRACED) == 0) {
 				if (mainStop)
 					kill(pid, SIGTERM);
 
@@ -222,6 +213,20 @@ int main(int argc, char *argv[])
 
 	trace(TRACE_INFO, "main(): exit");
 	return 0;
+}
+
+void get_config(serverConfig_t *config)
+{
+
+	trace(TRACE_DEBUG, "%s,%s: reading config",
+			__FILE__, __func__);
+	config_read(configFile);
+	SetConfigItems(config);
+	SetTraceLevel("IMAP");
+	GetDBParams(&_db_params);
+
+	config->ClientHandler = IMAPClientHandler;
+	config->timeoutMsg = IMAP_TIMEOUT_MSG;
 }
 
 
@@ -275,172 +280,176 @@ void SetConfigItems(serverConfig_t * config)
 	/* read items: NCHILDREN */
 	config_get_value("NCHILDREN", "IMAP", val);
 	if (strlen(val) == 0)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): no value for NCHILDREN in config file");
+		trace(TRACE_FATAL, "%s,%s: no value for NCHILDREN in config file",
+				__FILE__, __func__);
 
 	if ((config->startChildren = atoi(val)) <= 0)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): value for NCHILDREN is invalid: [%d]",
-		      config->startChildren);
+		trace(TRACE_FATAL, "%s,%s: value for NCHILDREN is invalid: [%d]",
+				__FILE__, __func__,
+				config->startChildren);
 
-	trace(TRACE_DEBUG,
-	      "SetConfigItems(): server will create  [%d] children",
-	      config->startChildren);
-
+	trace(TRACE_DEBUG, "%s,%s: server will create  [%d] children",
+			__FILE__, __func__, 
+			config->startChildren);
 
 	/* read items: MAXCONNECTS */
 	config_get_value("MAXCONNECTS", "IMAP", val);
 	if (strlen(val) == 0)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): no value for MAXCONNECTS in config file");
+		trace(TRACE_FATAL, "%s,%s: no value for MAXCONNECTS in config file",
+				__FILE__, __func__);
 
 	if ((config->childMaxConnect = atoi(val)) <= 0)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): value for MAXCONNECTS is invalid: [%d]",
-		      config->childMaxConnect);
+		trace(TRACE_FATAL, "%s,%s: value for MAXCONNECTS is invalid: [%d]",
+				__FILE__, __func__, 
+				config->childMaxConnect);
 
-	trace(TRACE_DEBUG,
-	      "SetConfigItems(): children will make max. [%d] connections",
-	      config->childMaxConnect);
+	trace(TRACE_DEBUG, "%s,%s: children will make max. [%d] connections",
+			__FILE__, __func__, 
+			config->childMaxConnect);
 
 	/* read items: MINSPARECHILDREN */
 	config_get_value("MINSPARECHILDREN", "IMAP", val);
 	if (strlen(val) == 0)
-		trace(TRACE_FATAL, 
-			"SetConfigItems(): no value for MINSPARECHILDREN in config file");
+		trace(TRACE_FATAL, "%s,%s: no value for MINSPARECHILDREN in config file",
+				__FILE__, __func__);
 	if ( (config->minSpareChildren = atoi(val)) <= 0)
-	        trace(TRACE_FATAL, 
-			"SetConfigItems(): value for MINSPARECHILDREN is invalid: [%d]", 
-			config->minSpareChildren);
+	        trace(TRACE_FATAL, "%s,%s: value for MINSPARECHILDREN is invalid: [%d]",
+				__FILE__, __func__, 
+				config->minSpareChildren);
 
-	trace(TRACE_DEBUG, 
-		"SetConfigItems(): will maintain minimum of [%d] spare children in reserve", 
-		config->minSpareChildren);
+	trace(TRACE_DEBUG, "%s,%s: will maintain minimum of [%d] spare children in reserve",
+			__FILE__, __func__, 
+			config->minSpareChildren);
 
 	
 	/* read items: MAXSPARECHILDREN */
 	config_get_value("MAXSPARECHILDREN", "IMAP", val);
    	if (strlen(val) == 0)
-         	trace(TRACE_FATAL, 
-			"SetConfigItems(): no value for MAXSPARECHILDREN in config file");
+         	trace(TRACE_FATAL, "%s,%s: no value for MAXSPARECHILDREN in config file",
+				__FILE__, __func__);
 	if ( (config->maxSpareChildren = atoi(val)) <= 0)
-        	trace(TRACE_FATAL, 
-			"SetConfigItems(): value for MAXSPARECHILDREN is invalid: [%d]", 
-			config->maxSpareChildren);
+        	trace(TRACE_FATAL, "%s,%s: value for MAXSPARECHILDREN is invalid: [%d]",
+				__FILE__, __func__, 
+				config->maxSpareChildren);
 
-	trace(TRACE_DEBUG, 
-		"SetConfigItems(): will maintain maximum of [%d] spare children in reserve", 
-		config->maxSpareChildren);
+	trace(TRACE_DEBUG, "%s,%s: will maintain maximum of [%d] spare children in reserve",
+			__FILE__, __func__, 
+			config->maxSpareChildren);
 
 
 	/* read items: MAXCHILDREN */
 	config_get_value("MAXCHILDREN", "IMAP", val);
 	if (strlen(val) == 0)
-        	trace(TRACE_FATAL, 
-			"SetConfigItems(): no value for MAXCHILDREN in config file");
+        	trace(TRACE_FATAL, "%s,%s: no value for MAXCHILDREN in config file",
+				__FILE__, __func__);
    	if ( (config->maxChildren = atoi(val)) <= 0)
-        	trace(TRACE_FATAL, 
-			"SetConfigItems(): value for MAXCHILDREN is invalid: [%d]", 
-			config->maxSpareChildren);
+        	trace(TRACE_FATAL, "%s,%s: value for MAXCHILDREN is invalid: [%d]",
+				__FILE__, __func__, 
+				config->maxSpareChildren);
 
-	trace(TRACE_DEBUG, 
-		"SetConfigItems(): will allow maximum of [%d] children", 
-		config->maxChildren);
+	trace(TRACE_DEBUG, "%s,%s: will allow maximum of [%d] children",
+			__FILE__, __func__, 
+			config->maxChildren);
 
 	
 	/* read items: TIMEOUT */
 	config_get_value("TIMEOUT", "IMAP", val);
 	if (strlen(val) == 0) {
-		trace(TRACE_DEBUG,
-		      "SetConfigItems(): no value for TIMEOUT in config file");
-		config->timeout = 0;
+		trace(TRACE_DEBUG, "%s,%s: no value for TIMEOUT in config file",
+				__FILE__, __func__);
+		config->timeout = 60;
 	} else if ((config->timeout = atoi(val)) <= 30)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): value for TIMEOUT is invalid: [%d]",
-		      config->timeout);
+		trace(TRACE_FATAL, "%s,%s: value for TIMEOUT is invalid: [%d]",
+				__FILE__, __func__, 
+				config->timeout);
 
-	trace(TRACE_DEBUG, "SetConfigItems(): timeout [%d] seconds",
-	      config->timeout);
+	trace(TRACE_DEBUG, "%s,%s: timeout [%d] seconds",
+			__FILE__, __func__, 
+			config->timeout);
 
 
 	/* read items: PORT */
 	config_get_value("PORT", "IMAP", val);
 	if (strlen(val) == 0)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): no value for PORT in config file");
+		trace(TRACE_FATAL, "%s,%s: no value for PORT in config file",
+				__FILE__, __func__);
 
 	if ((config->port = atoi(val)) <= 0)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): value for PORT is invalid: [%d]",
-		      config->port);
+		trace(TRACE_FATAL, "%s,%s: value for PORT is invalid: [%d]",
+				__FILE__, __func__, 
+				config->port);
 
-	trace(TRACE_DEBUG, "SetConfigItems(): binding to PORT [%d]",
-	      config->port);
+	trace(TRACE_DEBUG, "%s,%s: binding to PORT [%d]",
+			__FILE__, __func__, 
+			config->port);
 
 
 	/* read items: BINDIP */
 	config_get_value("BINDIP", "IMAP", val);
 	if (strlen(val) == 0)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): no value for BINDIP in config file");
+		trace(TRACE_FATAL, "%s,%s: no value for BINDIP in config file",
+				__FILE__, __func__);
 
 	strncpy(config->ip, val, IPLEN);
 	config->ip[IPLEN - 1] = '\0';
 
-	trace(TRACE_DEBUG, "SetConfigItems(): binding to IP [%s]",
-	      config->ip);
+	trace(TRACE_DEBUG, "%s,%s: binding to IP [%s]",
+			__FILE__, __func__, 
+			config->ip);
 
 
 	/* read items: RESOLVE_IP */
 	config_get_value("RESOLVE_IP", "IMAP", val);
 	if (strlen(val) == 0)
-		trace(TRACE_DEBUG,
-		      "SetConfigItems(): no value for RESOLVE_IP in config file");
+		trace(TRACE_DEBUG, "%s,%s: no value for RESOLVE_IP in config file",
+				__FILE__, __func__);
 
 	config->resolveIP = (strcasecmp(val, "yes") == 0);
 
-	trace(TRACE_DEBUG, "SetConfigItems(): %sresolving client IP",
-	      config->resolveIP ? "" : "not ");
+	trace(TRACE_DEBUG, "%s,%s: %sresolving client IP",
+			__FILE__, __func__, 
+			config->resolveIP ? "" : "not ");
 
 
 	/* read items: IMAP-BEFORE-SMTP */
 	config_get_value("IMAP_BEFORE_SMTP", "IMAP", val);
 	if (strlen(val) == 0)
-		trace(TRACE_DEBUG,
-		      "SetConfigItems(): no value for IMAP_BEFORE_SMTP  in config file");
+		trace(TRACE_DEBUG, "%s,%s: no value for IMAP_BEFORE_SMTP  in config file",
+				__FILE__, __func__);
 
 	imap_before_smtp = (strcasecmp(val, "yes") == 0);
 
-	trace(TRACE_DEBUG, "SetConfigItems(): %s IMAP-before-SMTP",
-	      imap_before_smtp ? "Enabling" : "Disabling");
+	trace(TRACE_DEBUG, "%s,%s: %s IMAP-before-SMTP",
+			__FILE__, __func__, 
+			imap_before_smtp ? "Enabling" : "Disabling");
 
 
 	/* read items: EFFECTIVE-USER */
 	config_get_value("EFFECTIVE_USER", "IMAP", val);
 	if (strlen(val) == 0)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): no value for EFFECTIVE_USER in config file");
+		trace(TRACE_FATAL, "%s,%s: no value for EFFECTIVE_USER in config file",
+				__FILE__, __func__);
 
 	strncpy(config->serverUser, val, FIELDSIZE);
 	config->serverUser[FIELDSIZE - 1] = '\0';
 
-	trace(TRACE_DEBUG,
-	      "SetConfigItems(): effective user shall be [%s]",
-	      config->serverUser);
+	trace(TRACE_DEBUG, "%s,%s: effective user shall be [%s]",
+			__FILE__, __func__, 
+			config->serverUser);
 
 
 	/* read items: EFFECTIVE-GROUP */
 	config_get_value("EFFECTIVE_GROUP", "IMAP", val);
 	if (strlen(val) == 0)
-		trace(TRACE_FATAL,
-		      "SetConfigItems(): no value for EFFECTIVE_GROUP in config file");
+		trace(TRACE_FATAL, "%s,%s: no value for EFFECTIVE_GROUP in config file",
+				__FILE__, __func__);
 
 	strncpy(config->serverGroup, val, FIELDSIZE);
 	config->serverGroup[FIELDSIZE - 1] = '\0';
 
-	trace(TRACE_DEBUG,
-	      "SetConfigItems(): effective group shall be [%s]",
-	      config->serverGroup);
+	trace(TRACE_DEBUG, "%s,%s: effective group shall be [%s]",
+			__FILE__, __func__, 
+			config->serverGroup);
 
 
 
