@@ -65,6 +65,8 @@ static void Daemonize(void);
 static int SetMainSigHandler(void);
 static void MainSigHandler(int sig, siginfo_t * info, void *data);
 
+static void get_config(serverConfig_t *config);
+
 /* also used in pop3.c */
 int pop_before_smtp = 0;
 
@@ -114,8 +116,6 @@ int main(int argc, char *argv[])
 			       "$Revision$ %s\n\n", COPYRIGHT);
 			return 0;
 		case 'n':
-			/* TODO: We should also prevent children from forking,
-			 * but for now we'll just set a flag and skip Daemonize. */
 			no_daemonize = 1;
 			break;
 		case 'h':
@@ -149,10 +149,13 @@ int main(int argc, char *argv[])
 
 	SetMainSigHandler();
 	
-	/* TODO: don't spawn children, either. this is at least a good start. */
-	if (!no_daemonize)
-		Daemonize();
-
+	if (no_daemonize) {
+		get_config(&config);
+		StartCliServer(&config);
+		config_free();
+		return 0;
+	}
+	
 	/* We write the pidFile after Daemonize because
 	 * we may actually be a child of the original process. */
 	pidfile_create(pidFile, getpid());
@@ -162,20 +165,12 @@ int main(int argc, char *argv[])
 		mainStop = 0;
 		mainRestart = 0;
 
-		trace(TRACE_DEBUG, "main(): reading config");
 #ifdef PROC_TITLES
 		init_set_proc_title(argc, argv, envp, PNAME);
 		set_proc_title("%s", "Idle");
 #endif
 
-                config_read(configFile);
-		SetConfigItems(&config);
-		SetTraceLevel("POP");
-		GetDBParams(&_db_params);
-
-		config.ClientHandler = pop3_handle_connection;
-		config.timeoutMsg = POP_TIMEOUT_MSG;
-
+		get_config(&config);
 		CreateSocket(&config);
 
 		switch ((pid = fork())) {
@@ -230,6 +225,21 @@ int main(int argc, char *argv[])
 	trace(TRACE_INFO, "main(): exit");
 	return 0;
 }
+
+void get_config(serverConfig_t *config)
+{
+	trace(TRACE_DEBUG, "%s,%s: reading config",
+			__FILE__, __func__);
+	
+	config_read(configFile);
+	SetConfigItems(config);
+	SetTraceLevel("POP");
+	GetDBParams(&_db_params);
+
+	config->ClientHandler = pop3_handle_connection;
+	config->timeoutMsg = POP_TIMEOUT_MSG;
+}
+
 
 
 void MainSigHandler(int sig, siginfo_t * info UNUSED, void *data UNUSED)
